--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "react-swipeable-views": "^0.13.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "style-loader": "^1.0.0",
     "superagent": "3.5.2",
     "uniqid": "^5.0.3"
   }
