--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "postcss-use": "^3.0.0",
     "progress-bar-webpack-plugin": "^1.11.0",
     "prun": "^1.0.1",
+    "raw-loader": "^3.1.0",
     "thread-loader": "^1.2.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.0.1",
