--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-bootstrap-app-admin",
+  "name": "mebel-market",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -21,14 +21,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sosedisverhu/react-bootstrap-app-admin.git"
+    "url": "git+https://github.com/sosedisverhu/mebel-market.git"
   },
   "author": "Volodymyr Bilous",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/sosedisverhu/react-bootstrap-app-admin/issues"
+    "url": "https://github.com/sosedisverhu/mebel-market/issues"
   },
-  "homepage": "https://github.com/sosedisverhu/react-bootstrap-app-admin#readme",
+  "homepage": "https://github.com/sosedisverhu/mebel-market#readme",
   "devDependencies": {
     "assets-webpack-plugin": "^3.6.0",
     "autoprefixer": "^8.6.5",
