--- a/package.json
+++ b/package.json
@@ -103,6 +103,8 @@
     "webpack-stylish": "^0.1.8"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^15.0.0",
+    "@ckeditor/ckeditor5-react": "^2.0.0",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "@tinkoff/utils": "^2.0.0",
@@ -119,6 +121,7 @@
     "js-cookie": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "lodash.debounce": "^4.0.8",
+    "lodash.set": "^4.3.2",
     "md5": "^2.2.1",
     "mongoose": "^5.5.2",
     "multer": "^1.4.1",
