--- a/package.json
+++ b/package.json
@@ -110,7 +110,8 @@
     "classnames": "^2.2.6",
     "compression": "^1.7.3",
     "cookie-parser": "^1.4.4",
-    "date-fns": "^1.30.1",
+    "date-fns": "^2.8.1",
+    "date-fns-tz": "^1.0.8",
     "device": "^0.3.9",
     "express": "^4.16.3",
     "express-http-to-https": "^1.1.4",
@@ -119,6 +120,7 @@
     "js-cookie": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "lodash.debounce": "^4.0.8",
+    "lodash.set": "^4.3.2",
     "md5": "^2.2.1",
     "mongoose": "^5.5.2",
     "multer": "^1.4.1",
