--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "react-swipeable-views": "^0.13.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "smoothscroll-polyfill": "^0.4.4",
     "style-loader": "^1.0.0",
     "superagent": "3.5.2",
     "uniqid": "^5.0.3"
