--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
   "bugs": {
     "url": "https://github.com/sosedisverhu/mebel-market/issues"
   },
+  "_moduleAliases": {
+    "@ckeditor": "/node_modules/@ckeditor"
+  },
   "homepage": "https://github.com/sosedisverhu/mebel-market#readme",
   "devDependencies": {
     "assets-webpack-plugin": "^3.6.0",
@@ -105,8 +108,30 @@
     "webpack-stylish": "^0.1.8"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^15.0.0",
-    "@ckeditor/ckeditor5-react": "^2.0.0",
+    "@ckeditor/ckeditor5-adapter-ckfinder": "^17.0.0",
+    "@ckeditor/ckeditor5-alignment": "^17.0.0",
+    "@ckeditor/ckeditor5-autoformat": "^17.0.0",
+    "@ckeditor/ckeditor5-basic-styles": "^17.0.0",
+    "@ckeditor/ckeditor5-block-quote": "^17.0.0",
+    "@ckeditor/ckeditor5-build-decoupled-document": "^17.0.0",
+    "@ckeditor/ckeditor5-ckfinder": "^17.0.0",
+    "@ckeditor/ckeditor5-easy-image": "^17.0.0",
+    "@ckeditor/ckeditor5-editor-classic": "^17.0.0",
+    "@ckeditor/ckeditor5-essentials": "^17.0.0",
+    "@ckeditor/ckeditor5-heading": "^17.0.0",
+    "@ckeditor/ckeditor5-image": "^17.0.0",
+    "@ckeditor/ckeditor5-indent": "^17.0.0",
+    "@ckeditor/ckeditor5-link": "^17.0.0",
+    "@ckeditor/ckeditor5-list": "^17.0.0",
+    "@ckeditor/ckeditor5-media-embed": "^17.0.0",
+    "@ckeditor/ckeditor5-paragraph": "^17.0.0",
+    "@ckeditor/ckeditor5-paste-from-office": "^17.0.0",
+    "@ckeditor/ckeditor5-react": "^2.1.0",
+    "@ckeditor/ckeditor5-remove-format": "^17.0.0",
+    "@ckeditor/ckeditor5-table": "^17.0.0",
+    "@ckeditor/ckeditor5-theme-lark": "^17.0.0",
+    "@ckeditor/ckeditor5-typing": "^17.0.0",
+    "@ckeditor/ckeditor5-ui": "^17.0.0",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "@tinkoff/utils": "^2.0.0",
