--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "express": "^4.16.3",
     "express-http-to-https": "^1.1.4",
     "express-static-gzip": "^1.1.3",
+    "helmet": "^3.22.0",
     "http-proxy": "^1.17.0",
     "js-cookie": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
