--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "webpack-stylish": "^0.1.8"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^19.0.1",
     "@ckeditor/ckeditor5-react": "^2.0.0",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
