--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start:forever:server": "forever start -o logs/app.log -e logs/err.log server/compiled/server.js",
     "stop:forever:server": "forever stopall",
     "deploy": "npm run stop:forever:server && npm run build:static:prod && npm run build:server:prod && cross-env PORT=80 npm run start:forever:server",
+    "deploy:server": "npm run stop:forever:server && cross-env PORT=80 npm run start:forever:server",
     "deploy:dev": "npm run stop:forever:server && npm run build:static:dev && npm run build:server:dev && cross-env PORT=80 npm run start:forever:server"
   },
   "repository": {
