--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-select": "^3.1.0",
+    "react-slick": "^0.28.0",
     "react-sortable-hoc": "^1.9.1",
     "react-swipeable-views": "^0.13.3",
     "redux": "^4.0.1",
