--- a/package.json
+++ b/package.json
@@ -16,13 +16,12 @@
         "build:server:dev": "prun build:server:dev",
         "build:server:prod": "prun build:server:prod",
         "start:server": "node server/compiled/server.js",
-        "start:dev": "npm run build:static:dev && npm run build:server:dev && npm run start:server",
+        "start:dev": "cross-env PORT=3000 npm run build:static:dev && npm run build:server:dev && npm run start:server",
         "start:prod": "npm run build:static:prod && npm run build:server:prod && npm run start:server",
-        "start:forever:server": "forever start -o logs/app.log -e logs/err.log server/compiled/server.js",
-        "stop:forever:server": "forever stopall",
-        "deploy": "npm run stop:forever:server && npm run build:static:prod && npm run build:server:prod && cross-env PORT=80 npm run start:forever:server",
-        "deploy:server": "npm run stop:forever:server && cross-env PORT=80 npm run start:forever:server",
-        "deploy:dev": "npm run stop:forever:server && npm run build:static:dev && npm run build:server:dev && cross-env PORT=80 npm run start:forever:server"
+        "start:pm2:server": "pm2 start server/compiled/server.js --name app",
+        "stop:pm2:server": "pm2 stop app",
+        "deploy": "npm run stop:pm2:server & npm run build:static:prod && npm run build:server:prod && cross-env PORT=80 npm run start:pm2:server",
+        "deploy:server": "npm run stop:pm2:server & cross-env PORT=80 npm run start:pm2:server"
     },
     "repository": {
         "type": "git",
@@ -74,7 +73,6 @@
         "extract-text-webpack-plugin": "^3.0.2",
         "file-loader": "^1.1.11",
         "find-package": "^1.0.0",
-        "forever": "0.15.3",
         "json-loader": "^0.5.7",
         "mongo-seeding": "^3.4.0-alpha.1",
         "optimize-js-plugin": "0.0.4",
@@ -138,6 +136,7 @@
         "multer": "^1.4.1",
         "node-schedule": "^2.0.0",
         "nodemailer": "^6.2.1",
+        "pm2": "^4.5.5",
         "prop-types": "^15.6.2",
         "query-string": "5",
         "react": "^16.4.0",
